# shriek

./: CMakeLists.txt  vcpkg.json
dep/libpsxav/: CMakeLists.txt  libpsxav.h
src/: main.cc
